--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,4 @@
+
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
@@ -5,6 +6,7 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  background-color: red;
 }
 
 code {
@@ -53,7 +55,8 @@ footer {
 }
 
 footer > img{
-  width: 200px;
+  height: 40px;
+  width: auto;
   margin: 0;
 }
 footer > p{
@@ -120,3 +123,7 @@ tr:nth-child(even) {
 .dark > a {
   color: white;
 }
+
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
