--- a/src/index.css
+++ b/src/index.css
@@ -1,89 +1,181 @@
 body {
+  box-sizing: border-box;
   margin: 0;
+  padding: 0;
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
     "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  background-color: rgb(184, 184, 184);
+  background-color: #e5e8f2;
 }
 
-code {
+a {
+  text-decoration: none;
+  cursor: pointer;
+}
+
+/* code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
-}
-.favButton {
+} */
+
+/* .favButton {
   background-color: rgba(136, 136, 136, 0.116);
   padding: 10px;
   border: none;
   width: 100%;
   cursor: pointer;
-}
+} */
 
-h1 {
+/* h1 {
   text-align: center;
-}
+} */
 
 nav {
   display: flex;
-  width: 80vw;
-  justify-content: flex-start;
-  padding: 1rem;
+  justify-content: space-between;
+  align-items: center;
+  padding: 0rem 1rem;
+  height: 4rem;
+  background-color: #7990ec;
+  position: fixed;
+  top: 0;
+  right: 0;
+  left: 0;
+}
+
+.navLinks {
+  display: flex;
+  gap: 2rem;
 }
 
 a {
-  color: #000;
+  color: white;
   text-decoration: none;
-  margin: 5px;
   cursor: pointer;
 }
+
 a:hover {
-  color: rgb(136, 136, 136);
+  color: rgb(226, 226, 226);
+}
+
+nav > button {
+  color: gray;
+  font-size: 0.9rem;
+  font-weight: 400;
+  background-color: white;
+  border: 0;
+  height: 40px;
+  width: 140px;
+  border-radius: 0.3rem;
 }
 
 footer {
   display: flex;
-  justify-content: center;
-  text-align: center;
-  padding: 2rem;
+  flex-direction: column;
+  align-items: center;
+  padding: 1rem;
   position: relative;
   bottom: 0;
-  width: 90%;
+  left: 0;
+  right: 0;
   height: 40px;
   margin-top: 2rem;
+  background-color: #86868669;
 }
 
 footer > img {
-  height: 40px;
-  width: auto;
+  width: 120px;
   margin: 0;
 }
 footer > p {
   margin: 0;
-  padding-top: 0.7rem;
-}
-
-form {
-  display: flex;
-  flex-direction: column;
-  justify-content: space-around;
-  width: 300px;
-  height: 100px;
-  margin: 0 auto;
 }
 
 .card {
   display: flex;
-  justify-content: space-around;
   flex-direction: column;
   align-items: center;
   width: 200px;
-  padding: 0.5rem 0.5rem 0 0.5rem;
-  border: 0.5px solid rgb(136, 136, 136);
+  padding: 3rem;
+  border-radius: 0.5rem;
+  box-shadow: rgba(112, 139, 167, 0.3) 0px 8px 24px;
+}
+
+.cardInfo {
+  text-align: center;
+}
+
+.cardInfoDetail {
+  display: flex;
+  align-items: center;
+  gap: 2rem;
+  margin-bottom: 5rem;
+}
+
+.profileImg {
+  width: 6.5rem;
+  border-radius: 100%;
+  box-shadow: rgba(112, 139, 167, 0.4) 0px 8px 14px;
+}
+
+.profileImgDetail {
+  width: 8rem;
+  height: 8rem;
+  border-radius: 100%;
+  box-shadow: rgba(112, 139, 167, 0.4) 0px 8px 14px;
+}
+
+.cardName {
+  color: #222;
+  font-size: 1.5rem;
+}
+
+.cardUsername {
+  color: #525252;
+  font-size: 1rem;
+  margin-top: -15px;
+}
+
+.card > button {
+  color: white;
+  font-size: 0.9rem;
+  font-weight: 400;
+  background-color: #7990ec;
+  border: 0;
+  height: 40px;
+  width: 140px;
+  border-radius: 0.3rem;
+  box-shadow: rgba(112, 139, 167, 0.4) 0px 8px 14px;
 }
 
 .card:hover {
-  border: 0.5px solid rgb(206, 217, 142);
+  border: 0.5px solid #7990ec;
+}
+
+.sections {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  padding-top: 4rem;
+}
+
+.sections > button {
+  color: white;
+  font-size: 0.9rem;
+  font-weight: 400;
+  background-color: #7990ec;
+  border: 0;
+  height: 40px;
+  width: 140px;
+  border-radius: 0.3rem;
+  box-shadow: rgba(112, 139, 167, 0.4) 0px 8px 14px;
+}
+
+.sectionsNames {
+  color: gainsboro;
+  margin-bottom: 4rem;
 }
 
 .card-grid {
@@ -96,7 +188,38 @@ form {
   margin: 0 auto;
 }
 
-table {
+.contactCard {
+  text-align: center;
+}
+
+form {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  width: 300px;
+  height: 100px;
+  margin: 0 auto;
+  gap: 1rem;
+  padding: 20px;
+}
+
+input {
+  width: 240px;
+}
+
+form > button {
+  color: white;
+  font-size: 0.9rem;
+  font-weight: 400;
+  background-color: #7990ec;
+  border: 0;
+  height: 60px;
+  width: 240px;
+  border-radius: 0.3rem;
+  box-shadow: rgba(112, 139, 167, 0.4) 0px 8px 14px;
+}
+
+/* table {
   border-collapse: collapse;
   border-spacing: 0;
   width: 100%;
@@ -113,15 +236,15 @@ th {
 
 tr:nth-child(even) {
   background-color: #dddddd;
-}
+} */
 
-.dark {
+/* .dark {
   background-color: #12121296;
   color: white;
 }
 .dark > a {
   color: white;
-}
+} */
 
 .app {
   transition: background-color 0.3s, color 0.3s;
