--- a/src/index.css
+++ b/src/index.css
@@ -159,6 +159,7 @@ footer > p {
   flex-direction: column;
   align-items: center;
   padding-top: 4rem;
+  height: 100vh;
 }
 
 .sections > button {
